# computer

./: Cargo.toml  Dockerfile  Rocket.toml  gunicorn.conf.py  requirements.txt
home_automation/: Dockerfile  README.md  gunicorn.conf.py  main.py
home_automation/app/: __init__.py  db.py  views.py
home_automation/app/templates/: ui_base.html  ui_home.html
home_automation/paapas/pa/: pa_db.py
home_automation/paapas/templates/pa/: ui_home.html
paapas/: __init__.py  db.py  home.py
paapas/big_data/: __init__.py  data.py
paapas/pa/: __init__.py  api.py  pa_db.py  ui.py
paapas/templates/: ui_base.html
paapas/templates/big_data/: big_data_home.html
paapas/templates/pa/: ui_add.html  ui_home.html
src/: main.rs
